--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
   name: wordpress
   code: wordpress
-  notify: aborra@ecloudcontrol.com
+  notify: bkoshy@ecloudcontrol.com
 
 build:
   version: 5.5
@@ -11,7 +11,7 @@ build:
   image_template: wordpress-5.5
 
 deploy:
-  context: anushab7/DEV
+  context: bibin-ecloudcontrol/DEV
   replicas: 1
   type: statefulset
   port:
@@ -42,5 +42,5 @@ properties:
   MYSQL_PASSWORD:
      vault: MYSQL_PASSWORD_KEY
   #Generate hash at https://ehikioya.com/wordpress-password-hash-generator/
-  ADMIN_PASSWORD_HASH: $P$BwyuUvV0ObeJEyYYNyeQOJEHA7IM0c.
+  ADMIN_PASSWORD_HASH: $P$B5GljhbSpEcyUyhRKiO5W3YTO.aooL1
   revision : 89
